--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>arielflix</title>
 </head>
 <body>
-    
+    <header>
+        <h1>GTA 5</h1>
+    </header>
+    <section>
+        <div>
+            <h1>instalar GTA 5   atualizado (2025)</h1>
+            <p> ➟[clique aqui] para baixar</p>
+        </div>
+    </section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
