--- a/index.html
+++ b/index.html
@@ -4,55 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>arielflix</title>
+    <title>Aventura do Ariel</title>
 </head>
 <body>
-    <header>
-        <h1>GTA 5</h1>
-    </header>
-    <section>
-        <div>
-            <h1>instalar GTA 5   atualizado (2025)</h1>
-            <p> ➟[clique aqui] para baixar</p>
-        </div>
-    </section>
-
-<section>
-    <h2>mais videos</h2>
+<main>
     <div>
-  <a href="https://www.youtube.com/watch?v=tc-Rbq3wd3g">
-   <img src="https://img.youtube.com/vi/tc-Rbq3wd3g/maxresdefault.jpg"
-
-  </a>
-
- <a href="https://img.youtube.com/vi/tc-Rbq3wd3g/maxresdefault.jpg"
- <img src="https://img.youtube.com/vi/5vZg4rIPKzs/maxresdefault.jpg">
-
+        <img src="cenario-passo0.png">
+        <p>um dia desses, dentro de um livro da biblioteca da cidade , eu descobri uma carta antiga sobre uma cidade perdida, escondidan por riquezas e belezas .Nessa carta, a autora e eu decidi segui-las.</p> 
+        <button>sprygfiel</button>
+        <button>sao paulo</button>
     </div>
-
-
-</section>
- 
-
-
+</main>    
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
